# rps_arena

./: .clang-tidy  CMakeLists.txt  README.md
src/: bot.hpp  main.cpp  move.cpp  move.hpp
src/bots/: always_rock.hpp  beat_last.hpp  frequentist.hpp
